@@ -1,3 +1,8 @@
+2000-06-09  Robert Graham Merkel  <rgmerk@mira.net>
+
+	* src/scm/report/transaction-report.scm (): commented out
+	"merged" style because of conflict with double-column amounts.
+
 2000-06-08  Robert Graham Merkel  <rgmerk@mira.net>
 
 	* src/scm/report/average-balance.scm (average-balance-renderer): 
